# lovelyfi

./: README.md  pyproject.toml
lovelyfi/: __init__.py  lwconfig.json  lwrun.py
lovelyfi/lib/: liblw.py
