[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "lovelyfi"
author = "PaperNova"
author-email = "0x0is1@protonmail.com"
home-page = "https://github.com/PaperNova/lovelyfi"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
requires = ["requests"]
requires-python=">=3.7"
description-file="README.md"

[tool.flit.metadata.requires-extra]
dev = ["flit"]

[tool.flit.scripts]
lovelyfi = "lovelyfi.lwrun:main"